add a clean nextjs installation with tailwind

--- a/apps/back-end/package.json
+++ b/apps/back-end/package.json
@@ -27,6 +27,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
