--- a/apps/front-end/package.json
+++ b/apps/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "front-end",
   "version": "0.1.0",
   "type": "module",
   "private": true,
@@ -11,9 +11,16 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tailwindcss/postcss": "^4.0.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -21,7 +28,10 @@
     "@types/node": "^22",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.20.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.7",
     "typescript": "5.7.3"
   }
 }
