--- a/apps/back-end/package.json
+++ b/apps/back-end/package.json
@@ -23,8 +23,10 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
-    "drizzle-orm": "^0.40.0",
+    "@repo/shared-types": "workspace:*",
+    "argon2": "^0.41.1",
     "pg": "^8.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -43,7 +45,8 @@
     "@types/node": "^22.10.7",
     "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
-    "drizzle-kit": "^0.30.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
