--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check-types": "turbo check-types"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.30.5",
     "prettier": "^3.5.0",
     "turbo": "^2.4.2",
     "typescript": "5.7.3"
@@ -18,5 +19,8 @@
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "drizzle-orm": "^0.40.0"
   }
 }
