--- a/turbo.json
+++ b/turbo.json
@@ -1,8 +1,11 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "ui": "tui",
+  "globalEnv": ["BACKEND_URL", "SESSION_SECRET_KEY", "NODE_ENV"],
+  "globalDependencies": [".env"],
   "tasks": {
     "build": {
+      "env": ["!NEXT_PUBLIC_*", "BACKEND_URL"],
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**"]
@@ -12,6 +15,9 @@
     },
     "check-types": {
       "dependsOn": ["^check-types"]
+    },
+    "start": {
+      "dependsOn": ["^start"]
     },
     "test": {},
     "dev": {
